# InventoryApp

./: .gitignore  README.md  main.py  pyproject.toml
qml/App/: DashboardPage.qml  LoginPage.qml  Main.qml  ReportsPage.qml  Root.qml  qmldir
qml/Components/: ButtonPrimary.qml  ButtonSecondary.qml  Card.qml  DataTable.qml  Header.qml  InputField.qml  ItremCard.qml  MainContent.qml  Sidebar.qml  SidebarButton.qml  ToggleButton.qml  qmldir
qml/Layouts/: PageContainer.qml  qmldir
qml/Themestyles/: Colors.qml  Theme.qml  Typography.qml  qmldir
src/: main.py
src/authentication/: auth_service.py
src/database/: database.py
src/qml/components/: Chart.qml  CustomButton.qml  CustomInput.qml  NotificationPopup.qml  SessionManager.qml  qmldir
src/qml/pages/: GeneralSettingsPage.qml  MainApplicationPage.qml  SigninPage.qml  SignupPage.qml  UserSettingsPage.qml
src/qml/styles/: Theme.qml
src/qml/views/: AnalyticsView.qml  DashboardView.qml  UserFormView.qml  qmldir
src/utils/: __init__.py  analytics_service.py  config_manager.py  date_formatter.py  logger.py  settings_handler.py  validators.py
