[project]
name = "qt-auth-app"
version = "0.1.0"
description = "Qt Quick application with authentication and SQLite"
requires-python = ">=3.8"
dependencies = [
    "PySide6",
    "bcrypt"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
